{
    "version": 1,
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "8f8571a5-aafe-4d50-b6da-0b0dd7b7d375",
            "actions": [
                {
                    "name": "SideScrollingMovement",
                    "type": "Value",
                    "id": "b1fc385b-0cf3-4032-b2f3-d26778714638",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TopDownMovement",
                    "type": "Value",
                    "id": "e91a6f8f-7ba3-43fd-8d83-ce723feb9820",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a9154d5f-9e2d-48f9-804e-f57372cd4f5f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "369ab74e-b9cc-483b-ac5f-53cfb1ff0471",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d3a255d6-fbb6-49fd-ae2f-99d6e231a9bb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "6209b5af-7f1f-4653-a171-9ea2d9e03979",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideScrollingMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "51519b8c-5275-47d0-8f05-7f466d159a5e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideScrollingMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "e557e563-d8ec-4f6e-9232-53420aacc0a0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideScrollingMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "0e1ddee2-aef0-49ec-a73f-32ea9edfdd1a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TopDownMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "6a378bc3-d176-4253-b4fe-408988cee580",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TopDownMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "890e511a-6af0-4a8e-be1e-cfce982b1409",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TopDownMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "8a6e7cb3-cdf1-47bc-953e-099e678bdb96",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TopDownMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "0f1965cb-c3ef-4830-863c-8b5d12457b6e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TopDownMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "80c193fc-92f7-4149-8b10-a22a702a6ca1",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Special",
            "id": "7509f5e4-9033-4d98-a9b9-de59b3cfa4c9",
            "actions": [
                {
                    "name": "ChangeView",
                    "type": "Button",
                    "id": "9e62c1ab-ca80-4b73-a2f5-6518c025b4d6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "35694fe7-3762-45c2-9595-1f2caf003e20",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeView",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}